# madkudu-test

./: README.md  get_recent_customers.py  pyproject.toml  test-data.csv
